# direction_calculus

./: CMakeLists.txt  CMakeLists.txt.user.a643fd0  README.md  package.xml
include/: DirectionCalculus.hpp  DirectionCalculus.hpp~
include/DirectionCalculus/: DirectionCalculus.hpp  DirectionCalculus.hpp~
src/: DirectionCalculus.cpp  DirectionCalculus.cpp.autosave  direction_calculus_node.cpp  direction_calculus_node.cpp.autosave
